wind-coding-conventions/fixtures/invalid/sample-face/src/main/java/com/acme/order/service/BadOrderService.java
package com.acme.order.service;

import com.acme.order.dal.entities.OrderEntity;

public interface BadOrderService {
    OrderEntity queryOrderById(Long id);
}
